--- a/app/src/main/res/layout/screen1.xml
+++ b/app/src/main/res/layout/screen1.xml
@@ -14,7 +14,7 @@
         <ImageView
             android:layout_width="@dimen/img_width_height"
             android:layout_height="@dimen/img_width_height"
-            android:src="@mipmap/ic_launcher" />
+            android:src="@drawable/screen1" />
 
         <TextView
             android:layout_width="wrap_content"
